[package]
name = "tcp_parse"
version = "0.1.0"
edition = "2024"

authors = ["hlyang"]
license = "MIT OR Apache-2.0"
description = "一个简单的TCP抓包解析工具"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
documentation = "https://docs.rs/tcp_pack/"
readme = "README.md"
keywords = ["tcp", "packet", "protocol"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
pnet = "0.35.0"